feat: Thief steal town's product features. todo: Test features.